--- a/1_linear_reg/house_prices_LR.ipynb
+++ b/1_linear_reg/house_prices_LR.ipynb
@@ -89,23 +89,23 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('./data/house_prices.csv',sep=';' )\n",
+    "df = pd.read_csv('house_prices.csv',sep=';' )\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9740aa75",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1dc7f609cd0>"
+       "<matplotlib.collections.PathCollection at 0x27cb6e13820>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3ed00bc9",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cb7baa8a",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "array([628715.75342466])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "3fc54b51",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "array([135.78767123])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "5d15ee34",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "180616.43835616432"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d0ea1577",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "628715.7534151643"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ccbff71d",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "array([859554.79452055])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,17 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "30372c59",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1dc0d610250>]"
+       "[<matplotlib.lines.Line2D at 0x27cb6f5ea00>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "be4f899e",
    "metadata": {},
    "outputs": [
@@ -431,19 +431,19 @@
        "12  7100"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = pd.read_csv('./data/areas.csv')\n",
+    "df2 = pd.read_csv('areas.csv')\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "8ab75520",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "43f30926",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "546de546",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
        "12  7100  1.144709e+06"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,14 +592,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "3aa0a327",
    "metadata": {},
    "outputs": [],
    "source": [
     "# to export the prediction value to csv\n",
     "\n",
-    "df2.to_csv('./result/prediction.csv', index=False)"
+    "df2.to_csv('prediction.csv', index=False)"
    ]
   },
   {
